[gd_scene load_steps=4 format=2]

[ext_resource path="res://scene/Cursor.gd" type="Script" id=2]
[ext_resource path="res://image/XTTT.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Cursor" type="Position2D"]
z_index = 1
script = ExtResource( 2 )

[node name="CursorAnim" type="AnimatedSprite" parent="."]
scale = Vector2( 0.1, 0.1 )
frames = SubResource( 1 )

[node name="ClickCD" type="Timer" parent="."]

[node name="ClickProgress" type="ProgressBar" parent="."]
margin_left = -20.0
margin_top = -25.0
margin_right = 21.0
margin_bottom = -11.0
max_value = 1.0

[connection signal="timeout" from="ClickCD" to="." method="_on_ClickCD_timeout"]
